# cyo-adventure

./: .coderabbit.yaml  .cruft.json  .dcignore  .dockerignore  .editorconfig  .env.example  .env.staging.example  .gitattributes  .gitguardian.yml  .gitignore  .markdownlint.json  .mcp.json  .mutmut_config  .pre-commit-config.yaml  .secrets.baseline  .snyk  .trivyignore  .yamllint  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIG_TEMPLATES_SUMMARY.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  README.md  REUSE.toml  SECURITY.md  TECHNICAL_BASELINE.md  alembic.ini  cm_bodies.py  cm_build.py  cm_build2.py  cm_fk.py  cm_list.py  cm_over.py  codecov.yml  docker-compose.prod.yml  (+21 more)
.claude/: README.md  settings.json  settings.local.json.example
.claude/commands/: plan.md  pr.md  security.md  testing.md
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  known-vulnerabilities-template.md  known-vulnerabilities.md  workflows-README.md.j2
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: skeleton_promotion.md
.github/workflows/: ci.yml  cifuzzy.yml  claude-baseline-review.yml  codecov.yml  container-security.yml  dependency-provenance-weekly.yml  dependency-review.yml  docs.yml  e2e-prod.yml  e2e-real-nightly.yml  e2e-real-pr-smoke.yml  e2e-staging.yml  fips-compatibility.yml  mutation-testing.yml  pr-title.yml  pr-validation.yml  publish-pypi.yml  python-compatibility.yml  qlty.yml  release.yml  reuse.yml  safety-eval.yml  sbom.yml  scorecard.yml  security-analysis.yml  skeleton-promotion.yml  slsa-provenance.yml  sonarcloud.yml  supabase-ci.yml  supabase-production.yml  supabase-staging.yml  trigger-image-build.yml  update-visual-snapshots.yml  validate-cruft.yml
.qlty/: qlty.toml
.standards/: CLAUDE.baseline.md  README.baseline.md  README.md  REUSE.baseline.toml  env.example.baseline  mkdocs.yml.baseline  pyproject.toml.baseline  template_feedback.baseline.md
.superpowers/sdd/: task-6-report.md
ADRs/: index.html
ADRs/adr-template/: index.html
OPENSSF_COMPLIANCE/: index.html
PROJECT_SETUP/: index.html
PYTHON_COMPATIBILITY/: index.html
_data/: owners.yml
api/: index.html  postman-collection.json
api-reference/: index.html
architecture/: index.html
architecture/data-model/: index.html
architecture/deployment/: index.html
architecture/diagrams/: c4-container.puml  c4-context.puml  component-api-persistence.puml  component-player.puml  component-validator.puml  deployment.puml  er-diagram.puml  journey-dev-coverage.puml  journey-end-to-end.puml  journey-guardian.puml  seq-device-grant.puml  seq-generation.puml  seq-reading-state.puml
architecture/generation-pipeline/: index.html
architecture/story-skeletons/: index.html
architecture/system-overview/: index.html
architecture/user-journeys/: index.html
architecture/validation-and-player/: index.html
compliance/breach-notification-runbook/: index.html
compliance/coppa-compliance-audit/: index.html
compliance/coppa-gdpr-remediation-plan/: index.html
compliance/dpia/: index.html
compliance/gdpr-compliance-review/: index.html
compliance/information-security-program/: index.html
compliance/privacy-notice/: index.html
compliance/processor-dpa-checklist/: index.html
compliance/records-of-processing-activities/: index.html
design/offline-conflict-ux/: index.html
development/architecture/: index.html
development/code-quality/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: OPENSSF_COMPLIANCE.md  PROJECT_SETUP.md  PYTHON_COMPATIBILITY.md  api-reference.md  index.md  known-vulnerabilities.md  mvp-cut.md  phase0-decisions.md  snyk-implementation-findings.md  template_feedback.md
docs/ADRs/: README.md  adr-template.md
docs/_data/: tags.yml
docs/api/: README.md  postman-collection.json
docs/architecture/: README.md  data-model.md  deployment.md  generation-pipeline.md  story-skeletons.md  system-overview.md  user-journeys.md  validation-and-player.md
docs/compliance/: breach-notification-runbook.md  dpia.md  (+7 more)
frontend/: .dockerignore  .env.e2e-prod.example  .env.e2e-staging.example  .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.e2e-prod.config.ts  playwright.e2e-staging.config.ts  tsconfig.app.json  tsconfig.e2e.json  vite.config.ts
fuzz/: README.md  __init__.py  fuzz_condition_evaluator.py  fuzz_input_validation.py  fuzz_storybook_validation.py
known-vulnerabilities/: index.html
migrations/: env.py
mvp-cut/: index.html
phase0-decisions/: index.html
planning/: index.html  ws5_floor_baseline.json
schema/: storybook.schema.json
scripts/: README.md  _cleanup_shared.py  adversarial_harness.py  backfill_covers_r2.py  bind_theme.py  calibrate_mutation_floors.py  check_coverage_matrix.py  check_fill_integrity.py  check_fips_compatibility.py  check_orphaned_files.py  check_promotion_bundle.py  check_quality_gate.py  check_skeleton.py  check_theme_contract.py  cleanup_conditional_files.py  extract_changelog_section.py  flywheel_candidates.py  flywheel_cycle.py  flywheel_report.py  flywheel_scan.py  gen_phase2b_briefs.py  generate-client.sh  inject_changelog_footer_link.py  mutate_skeleton.py  mutation_score.py  parameterize_promotion.py  parameterize_skeleton.py  prepare_promotion_pr.py  promote_changelog.py  render_skeleton_diagrams.py  reset_e2e_real_state.py  run_diversity_eval.py  run_story_gate.py  seed_dev_data.py  seed_series_catalog.py  seed_staging.py  series_e2e_local.py  setup-supply-chain.sh  setup_github_protection.py  update-claude-standards.sh  (+2 more)
search/: search_index.json
snyk-implementation-findings/: index.html
supabase/: config.toml
template_feedback/: index.html
testing/: index.html
tests/: CLAUDE.md  __init__.py  conftest.py  test_example.py
tools/: gen_tools_catalog.py  generate_diagram_svgs.py  validate_front_matter.py
(+1493 files in other folders)
