# NOTE: This project uses UV as the package manager.
# Dependencies are defined in [project.dependencies] and [project.optional-dependencies] sections below.
# UV uses standard PEP 621 pyproject.toml format with uv.lock for reproducible builds.
[project]
name = "cyo-adventure"
version = "0.15.0"
description = "A choose-your-own-adventure reading app for kids"
authors = [
    {name = "Byron Williams", email = "byronawilliams@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

# Core production dependencies
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "rich>=13.5.0",
    # Cross-Version Compatibility Dependencies
    # =========================================
    # This template targets Python 3.10-3.14. Add version-specific dependencies
    # here if your code needs compatibility shims or replacements.
    #
    # COMMON BACKPORTS FOR 3.10 COMPATIBILITY:
    #   "tomli>=2.0.0; python_version < '3.11'",  # TOML parser (tomllib added in 3.11)
    #   "exceptiongroup>=1.1.0; python_version < '3.11'",  # Exception groups (added in 3.11)
    #   "typing-extensions>=4.12.0",  # Backport newer typing features
    #
    # AVAILABLE IN 3.11+:
    #   - tomllib: Native TOML parser
    #   - asyncio.TaskGroup: Structured concurrency
    #   - typing.Self, TypeVarTuple, Never, LiteralString
    #   - ExceptionGroup and except* syntax
    #
    # PEP 594 REMOVALS IN 3.13 (add replacements if needed):
    #   Removed modules: aifc, audioop, cgi, cgitb, chunk, crypt, imghdr, mailcap,
    #   msilib, nis, nntplib, ossaudiodev, pipes, sndhdr, spwd, sunau, telnetlib,
    #   uu, xdrlib
    #
    # Examples of version-specific dependencies:
    #   # Backport for Python 3.10
    #   "tomli>=2.0.0; python_version < '3.11'",
    #
    #   # Replacement for removed modules in 3.13+
    #   "legacy-cgi>=2.6.1; python_version >= '3.13'",  # If you need cgi module
    #   "filetype>=1.2.0",  # Better alternative to imghdr/sndhdr
    #
    #   # Typing enhancements
    #   "typing-extensions>=4.12.0; python_version < '3.13'",  # For latest typing features
    #
    # PYTHON 3.14+ CONSIDERATIONS:
    #   - from __future__ import annotations is deprecated (but still works until 2029+)
    #   - Free-threaded mode (python3.14t) may need GIL-compatible packages
    #   - NotImplemented in boolean context raises TypeError (was warning)
    #   - PEP 649: Deferred annotation evaluation (impacts runtime introspection)
    #
    # Examples for 3.14+ compatibility:
    #   # Free-threaded mode support (check package documentation)
    #   "numpy>=2.1.0; python_version >= '3.14'",  # Supports free-threaded mode
    #
    # UV handles these automatically based on the Python version being used.
    # See: https://docs.astral.sh/uv/concepts/dependencies/#dependency-specifiers
    "networkx>=3.6.1",
    "rq>=2.10.0",
    "redis>=8.0.0",
    "pyjwt[crypto]>=2.13.0",
    "jsonschema>=4.23",
    "google-genai>=2.10.0",
    "pillow>=12.3.0",
    # ADR-013 dependency floor: >=45 carries the ML-DSA/SLH-DSA (FIPS 204/205)
    # primitives. Also arrives via pyjwt[crypto]; this explicit constraint is
    # what makes a transitive downgrade below the floor a resolver error
    # instead of a silent posture regression. Do not remove as redundant.
    "cryptography>=45",
    "sentry-sdk>=2.66.0",
]

# Optional dependency groups
[project.optional-dependencies]
# Development dependencies
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.3.0",
    "pytest-randomly>=3.15.0",
    "hypothesis>=6.82.0",
    "testcontainers>=4",  # Ephemeral Postgres for integration tests
    "psycopg[binary]>=3",  # Sync driver used by testcontainers readiness checks
    # Code Quality (always included)
    "ruff>=0.9.0",
    "basedpyright>=1.18.0",  # Stricter type checker (replaces mypy)
    "bandit>=1.7.0",
    "vulture>=2.11",  # Dead code detection
    "pip-audit>=2.7.0",  # Python vulnerability scanning
    "pydoclint>=0.8.4",  # Docstring argument validation
    # Pre-commit
    "pre-commit>=3.3.0",
    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0,<10",
    "mkdocstrings[python]>=0.26.0",
    "griffe-pydantic>=1.1.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "python-frontmatter>=1.1.0",
    "ruamel-yaml>=0.18.0",
    # Development Tools
    "interrogate>=1.7.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "nox>=2024.10.16",  # Fixed: was 2025 (typo)
    "nox-uv>=0.6.3",    # Fixed: max available version is 0.6.3, not 1.0.0
    "mutmut>=3.3.1",
    # Google Cloud Assured OSS (optional - uncomment if using Assured OSS)
    "google-auth>=2.0.0",
    # "google-cloud-assured-oss>=0.1.0",  # Package not yet available in PyPI
    "google-api-core>=2.0.0",
    "python-dotenv>=1.0.0",  # For loading .env files
    "boto3-stubs[s3]>=1.34",
]


# API framework dependencies
api = [
    "fastapi>=0.120.1",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.18",
    "starlette>=0.49.1",
    "sqlalchemy[asyncio]>=2.0.0",  # ORM for database operations
    "asyncpg>=0.29.0",  # Async PostgreSQL driver for SQLAlchemy
    "httpx>=0.27",
    "anthropic>=0.116.0",
    "boto3>=1.34",
]







# Supply chain security tools
supply-chain = [
    "cyclonedx-bom>=4.6.0",          # SBOM generation (CycloneDX format)
    "pip-audit>=2.7.0",              # Python vulnerability scanning
    "pip-licenses>=4.0.0",           # License compliance checking
    "keyrings.google-artifactregistry-auth>=1.1.0",  # GCP Artifact Registry auth
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyo_adventure"]

# Ruff Configuration - Consolidated Linting & Formatting
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "dist",
    "build",
    "migrations",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
# Rule selection aligned with Google Python Style Guide + PyStrict enhancements
# Reference: https://google.github.io/styleguide/pyguide.html
# Reference: https://github.com/Ranteck/PyStrict-strict-python
select = [
    # Core Python style (Google-aligned)
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming (Google naming conventions)
    "D",    # pydocstyle (Google docstring style)
    "UP",   # pyupgrade (modern Python syntax)

    # Type annotations (Google requires type hints)
    "ANN",  # flake8-annotations (type hint enforcement)
    "TCH",  # flake8-type-checking (TYPE_CHECKING imports)
    "FA",   # flake8-future-annotations (use from __future__ import annotations)

    # Code quality (Pylint-equivalent rules)
    "C4",   # flake8-comprehensions
    "C90",  # mccabe complexity
    "PL",   # Pylint rules (Google uses Pylint)
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "RET",  # flake8-return
    "PIE",  # flake8-pie

    # Security
    "S",    # flake8-bandit

    # Best practices
    "T10",  # flake8-debugger (no debugger statements in production)
    "T20",  # flake8-print (no print in production)
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "PTH",  # flake8-use-pathlib
    "A",    # flake8-builtins
    "DTZ",  # flake8-datetimez

    # Performance and modernization
    "PERF", # Performance anti-patterns
    "FURB", # Refurb - modernization

    # Additional quality
    "LOG",  # Logging best practices
    "G",    # flake8-logging-format (logging string formatting)
    "TRY",  # Exception handling
    "ERA",  # Commented-out code
    "FBT",  # Boolean trap detection
    "ASYNC",# Async/await best practices
    "RUF",  # Ruff-specific rules

    # PyStrict additions (stricter standards)
    "BLE",  # flake8-blind-except (no bare except or except Exception)
    "EM",   # flake8-errmsg (error message best practices)
    "SLF",  # flake8-self (private member access)
    "INP",  # flake8-no-pep420 (require __init__.py in packages)
    "ISC",  # flake8-implicit-str-concat (implicit string concatenation)
    "PGH",  # pygrep-hooks (deprecated type comments, blanket ignores)
    "RSE",  # flake8-raise (raise statement best practices)
    "TID",  # flake8-tidy-imports (banned imports, relative imports)
    "YTT",  # flake8-2020 (Python version checks)
]

ignore = [
    # Formatting (handled by ruff format)
    "E501",   # line too long (handled by formatter)
    "COM812", # missing trailing comma (handled by formatter)
    "ISC001", # implicit string concatenation (handled by formatter)

    # Docstring style (Google convention conflicts)
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D212",   # multi-line-summary-first-line (conflicts with D213)
    "D105",   # missing docstring in magic method (__str__, etc.)
    "D107",   # missing docstring in __init__ (class docstring sufficient)

    # Type annotations (pragmatic exceptions)
    # Note: ANN101/ANN102 removed - rules deprecated in Ruff (self/cls annotation not needed)
    "ANN401", # dynamically typed expressions (Any) - sometimes necessary

    # Pylint rules (too strict for all cases)
    "PLR2004", # magic value comparison - too noisy
    "PLW2901", # outer loop variable overwritten - sometimes intentional

    # Practical exceptions
    "B008",   # function calls in defaults (Pydantic/FastAPI pattern)
    "S101",   # assert (pytest uses assert statements)
    "PTH123", # open() vs pathlib (sometimes direct open is clearer)
    "FBT001", # Boolean positional arg (acceptable in DSLs)
    "FBT002", # Boolean default arg (acceptable in DSLs)
    "TRY003", # Long exception messages (descriptive is good)
]

# McCabe Complexity Configuration (Google/Pylint alignment)
[tool.ruff.lint.mccabe]
max-complexity = 10  # Google/Pylint default

# Pylint Configuration (Function complexity limits)
[tool.ruff.lint.pylint]
max-args = 4           # Function argument limit
max-statements = 100   # Function length hard limit
max-branches = 12      # Nesting/branching limit
max-nested-blocks = 4  # Explicit nesting limit
max-returns = 6        # Return statement limit

[tool.ruff.lint.flake8-type-checking]
# Pydantic and SQLAlchemy evaluate annotations at runtime to build their models,
# so imports used in their subclasses' annotations must remain runtime imports.
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
    "sqlalchemy.orm.DeclarativeBase",
    "cyo_adventure.core.database.Base",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["cyo_adventure"]

[tool.ruff.lint.per-file-ignores]
# Module init files
"__init__.py" = ["F401", "D104"]

# The approval, me, moderation_thresholds, moderation_dashboard, families, and
# covers routers import Context (an Annotated[..., Depends()] alias) at
# runtime; FastAPI resolves the Depends at startup via inspect, so Context
# must not move into TYPE_CHECKING even when it appears only in annotations.
# Routers that import Context alongside other runtime-called names
# (ratings.py, reading.py, generation.py, profiles.py) don't need this: ruff
# won't suggest moving part of a multi-name import line.
"**/api/approval.py" = ["TC001"]
"**/api/me.py" = ["TC001"]
"**/api/moderation_thresholds.py" = ["TC001"]
"**/api/moderation_dashboard.py" = ["TC001"]
"**/api/families.py" = ["TC001"]
"**/api/covers.py" = ["TC001"]
"**/api/onboarding.py" = ["TC001"]
"**/api/notifications.py" = ["TC001"]
"**/api/rescreen.py" = ["TC001"]
# provider_allowlist.py imports Context alone (TC001, same reasoning as above)
# and types its path params directly as uuid.UUID (TC003): with `from __future__
# import annotations`, FastAPI resolves that annotation string via
# typing.get_type_hints at startup, which requires uuid to be a real runtime
# import, not one gated behind TYPE_CHECKING. Unlike reading.py/library.py/
# generation.py, this router has no other runtime call into the uuid module
# to keep ruff from flagging the import on its own.
"**/api/provider_allowlist.py" = ["TC001", "TC003"]

# Exception classes legitimately require multiple context parameters in __init__
"**/core/exceptions.py" = ["PLR0913"]

# Security middleware uses keyword-only args for a rich configuration surface
"**/middleware/security.py" = ["PLR0913"]

# Live provider adapters and the shared retry driver are configuration-heavy by
# nature (credential, endpoint, timeout, reasoning effort, retry policy, and an
# injectable client for tests); explicit keyword-only parameters are clearer and
# safer here than a positional config object.
"**/generation/providers/*.py" = ["PLR0913"]

# The generation orchestrator's staged-pipeline entry points carry the core
# inputs (brief, provider, pii) plus per-run tuning knobs (max_repairs, story-size
# scale); explicit keyword-only parameters read more clearly than a positional
# config object at these call sites.
"**/generation/orchestrator.py" = ["PLR0913"]

# The moderation readability stage carries provider, nodes, reading_target,
# tolerance, and max_tokens; all are mandatory and keyword-only, with no
# sensible default for any of them, so a config object would obscure the
# contract rather than clarify it.
"**/moderation/stages.py" = ["PLR0913"]

# The repair pass carries blob, report, generation_provider, pii, and max_tokens;
# all are mandatory and keyword-only. Each argument represents a distinct concern
# (story state, findings, backend, PII context, budget) with no sensible default,
# so grouping into a config object would obscure the contract rather than clarify it.
"**/moderation/repair.py" = ["PLR0913"]

# The pipeline entry point carries session, story_id, version, settings,
# generation_provider, and pii; all are mandatory and keyword-only, each a
# distinct concern (DB session, identity, lifecycle stage, config, backend, PII
# context) with no sensible default. A config object would obscure the contract.
"**/moderation/pipeline.py" = ["PLR0913"]

# The replay validator's public entry point and its two internal checks each
# carry the story plus the submitted reading-state fields (current_node,
# var_state, path, visit_set, choice_path); all are mandatory and keyword-only
# at the public boundary, each a distinct concern of the submitted state. A
# config object would obscure which fields the structural floor vs. replay
# checks require.
"**/player/replay.py" = ["PLR0913"]

# The review-surface projection's entry point carries status, storybook_id,
# version, blob, and moderation_report; all are mandatory and keyword-only,
# each a distinct concern (lifecycle state, identity, story content, findings)
# with no sensible default. A config object would obscure the contract.
"**/api/review_surface.py" = ["PLR0913"]

# edit_node's PATCH route has three path segments (storybook_id, version,
# node_id) that identify the exact node being edited, plus the request body
# and the Context dependency; each is REST-required or FastAPI-injected, not
# collapsible into a config object (PLR0913). NodeEditBody/ReviewSurfaceView
# (route body + return type) and Context must also stay real runtime imports
# for the same FastAPI-resolves-via-get_type_hints reason as approval.py (TC001).
"**/api/node_edit.py" = ["PLR0913", "TC001"]

# The library-item builder carries storybook_id, blob, and version (the
# identity of the row) plus rating and state (the per-profile enrichment,
# keyword-only with a None default); each is a distinct concern and a config
# object would obscure which fields are row identity vs. profile overlay.
"**/api/library.py" = ["PLR0913"]

# The combined Stage 1 fidelity gate carries original and filled (the two
# documents being compared) plus the mandatory keyword-only
# review_stage1_model, settings, and pii (no sensible default for any of
# the five); each is a distinct concern and a config object would obscure
# which fields are document content vs. review-backend configuration.
"**/generation/fidelity_gate.py" = ["PLR0913"]

# create_authored_request carries session, principal, family_id, profile,
# request_text, confirmation, and screening; the last five are mandatory and
# keyword-only, each a distinct concern (target family, target profile,
# screened text, author's band/length/style spec, screening outcome) with no
# sensible default. A config object would obscure the contract.
"**/story_requests/service.py" = ["PLR0913"]

# generate_cover carries storybook_id, version, session, settings, and three
# keyword-only pipeline-stage overrides (generate/optimize/upload) used to
# inject fakes in tests; each is a distinct concern (target row, unit of
# work, config, and the three pluggable stages) with no sensible default.
# A config object would obscure which stage a caller is overriding.
"**/covers/service.py" = ["PLR0913"]

# record_event carries session, actor, entity_type, entity_id, event_type,
# from_state, to_state, and payload; all but the last two are mandatory and
# keyword-only, each a distinct concern (unit-of-work, who, what entity, what
# transition, and the PII-free detail payload) with no sensible default. A
# config object would obscure the contract.
"**/events/writer.py" = ["PLR0913"]

# build_authoring_plan carries session, request, concept, plan, and actor;
# each a distinct mandatory concern (unit-of-work, the approved request, its
# concept, the admin's method/mechanism choice, and who is assigning the
# plan for the pipeline event). A config object would obscure the contract.
"**/story_requests/authoring_plan.py" = ["PLR0913"]

# _record_failure carries session, job, exc, provider, and from_state; each a
# distinct concern (unit-of-work, the row, the failure cause, the provider to
# re-stamp after rollback, and the true prior state for the pipeline event).
# A config object would obscure the failure-recording contract.
"**/generation/worker.py" = ["PLR0913"]

# approve carries session, principal, storybook, version, and the keyword-only
# visibility (WS-E E2); each a distinct concern (unit-of-work, the approving
# admin, the target row, which version to publish, and who may browse/assign
# the result). A config object would obscure the sole-publish-path contract.
"**/publishing/service.py" = ["PLR0913"]

# Test files (relaxed rules for test code)
"tests/**/*.py" = [
    "ANN",    # Type annotations not required in tests
    "ARG",    # Unused arguments (fixtures)
    "D",      # Docstrings not required in tests
    "PLR",    # Pylint refactor suggestions
    "PLC0415", # Imports inside test functions are idiomatic
    "ERA",    # Commented code (test debugging)
    "SLF",    # Private member access (testing internals)
    "BLE",    # Blind except (test error handling)
    "EM",     # Error messages (test exceptions)
    "TRY",    # Exception handling (test assertions)
    "INP",    # No __init__.py required for test directories
    # Security rules OK to skip in tests (specific, not blanket S)
    "S101",   # assert_used - pytest uses asserts
    "S105",   # hardcoded_password_string - test credentials are fake
    "S106",   # hardcoded_password_funcarg - test fixtures with fake passwords
    "S107",   # hardcoded_password_default - test default values
    "S108",   # hardcoded_tmp_directory - test temp paths are intentional
    "S311",   # random - non-crypto random in tests is fine
    "S113",   # request_without_timeout - test HTTP calls may be mocked
    "S603",   # subprocess_without_shell_equals_true - integration tests invoke fixed scripts
]

# Scripts (utility code - not packages)
"scripts/**/*.py" = [
    "ANN", "D", "T20", "TRY", "PTH", "PLR",
    "INP",    # Scripts are not packages
    "EM",     # Utility scripts don't need perfect error messages
    "T10",    # Debugger allowed during script development
    "BLE",    # Blind except (error handling in scripts)
    "C901",   # Complexity allowed in utility scripts
    "RUF012", # Class variable annotations (not needed in scripts)
    "SIM",    # Simplification suggestions (scripts prioritize clarity)
    "F821",   # Allow dynamic imports
    "G201",   # Logging patterns (scripts may use .error with exc_info)
    # Security rules OK to skip in scripts (specific, not blanket S)
    "S101",   # assert_used - scripts may use asserts for validation
    "S104",   # hardcoded_bind_all_interfaces - dev scripts may bind 0.0.0.0
    "S108",   # hardcoded_tmp_directory - scripts use /tmp intentionally
    "S311",   # random - non-crypto random in scripts is fine
    "S603",   # subprocess_without_shell_equals_true - scripts validate inputs
    "S607",   # start_process_with_partial_path - scripts use PATH
]

# Benchmarks (performance testing)
"benchmarks/**/*.py" = [
    "ANN", "D", "T20", "ARG", "TRY", "PLR",
    "INP",    # Benchmarks are not packages
    "EM",     # Benchmark exceptions
]

# Tools (development utilities)
"tools/**/*.py" = [
    "ANN", "D", "T20", "TRY", "PLR",
    "INP",    # Tools are not packages
    "EM",     # Tool exceptions
    "BLE",    # Blind except (error handling in tools)
    "C901",   # Complexity allowed in utility scripts
    "S603",   # subprocess_without_shell_equals_true - tools pass fixed args
    "S607",   # start_process_with_partial_path - resolved via shutil.which
]

# Nox configuration
"noxfile.py" = ["ANN", "D", "T20", "PLR", "INP", "PLC0415", "ERA001", "SIM105"]
# Fuzz testing (Atheris harnesses have specific patterns)
"fuzz/**/*.py" = [
    "N802",   # TestOneInput required by Atheris
    "S110",   # try-except-pass is intentional for fuzzing
    "BLE",    # Blind except is necessary in fuzz targets
    "INP",    # Fuzz tests are not packages
    "ANN", "D", "TRY",
]

# Claude skills and scripts
".claude/**/*.py" = [
    "T20",    # Print allowed for CLI output
    "C901",   # Complexity allowed in utility scripts
    "ANN", "D", "TRY", "PLR",
    "INP",    # Not packages
]

# API health checks - Example code with template patterns
"src/*/api/health.py" = [
    "ERA001",  # Commented code shows implementation examples
    "BLE001",  # Blind except in health checks for maximum resilience
    "PLC0415", # Local imports to avoid circular dependencies
]

# Security middleware - SSRF protection with intentional patterns
"src/*/middleware/security.py" = [
    "S104",    # 0.0.0.0 in BLOCKED_HOSTS list is intentional
    "BLE001",  # Blind except for URL parsing resilience
    "PLC0415", # Local imports to avoid circular dependencies
    "TRY300",  # Return in try block is clearer for simple cases
    "ANN001",  # call_next typing is complex (Starlette middleware)
    "RUF012",  # ClassVar not needed for constants
    "C416",    # Dict comprehension is clearer than dict()
    "SIM102",  # Nested if is more readable for security checks
]

# Cover generation worker - RQ entrypoint with intentional deferred imports
"src/*/covers/worker.py" = [
    "PLC0415", # Local imports to avoid circular dependencies
]

# Logging utilities - Structlog processor interface
"src/*/utils/logging.py" = [
    "ARG001",  # Unused args required by structlog processor interface
    "TC002",   # Processor needs to be runtime-available
]

# Quality gate script - Intentional URL handling
"scripts/check_quality_gate.py" = [
    "S310",    # URL schemes are validated before use (see nosec comment)
]

# BasedPyright Configuration
# Replaces MyPy with faster, stricter type checking
# Reference: https://docs.basedpyright.com
[tool.basedpyright]
pythonVersion = "3.11"
pythonPlatform = "All"

# Type checking mode: basic, standard, strict, all
# "strict" aligns with Google Python Style Guide requirements
typeCheckingMode = "strict"

# Source paths
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
    "build",
    "dist",
]

# Strict mode customizations
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportConstantRedefinition = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "error"
reportUninitializedInstanceVariable = "warning"
reportInvalidStringEscapeSequence = "error"
reportUnknownParameterType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "warning"
reportCallInDefaultInitializer = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportAssertAlwaysTrue = "error"
reportSelfClsParameterName = "error"
reportImplicitStringConcatenation = "warning"
reportUndefinedVariable = "error"
reportUnboundVariable = "error"
reportUnhashable = "error"
reportInvalidTypeVarUse = "error"

# BasedPyright-specific enhancements
reportUnreachable = "error"           # Detect unreachable code
reportAny = "warning"                  # Flag usage of Any type
reportExplicitAny = "warning"          # Flag explicit Any annotations
reportIgnoreCommentWithoutRule = "warning"  # Require specific ignore rules

# PyStrict strict inference settings
strictListInference = true             # Infer list element types strictly
strictDictionaryInference = true       # Infer dict key/value types strictly
strictSetInference = true              # Infer set element types strictly
strictParameterNoneValue = true        # Require explicit Optional for None defaults
analyzeUnannotatedFunctions = true     # Analyze functions without type hints
deprecateTypingAliases = true          # Warn on deprecated typing module aliases

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = [".", "src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
    "--cov=src/cyo_adventure",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
filterwarnings = [
    "error",
    # google-genai (src/cyo_adventure/covers/provider.py) builds a Union type
    # alias at import time that trips a Python 3.14 stdlib deprecation for the
    # pre-3.10 typing shim (_UnionGenericAlias); this fires inside the vendored
    # dependency, not our code, and has no upstream fix as of this writing.
    "ignore:.*_UnionGenericAlias.*is deprecated.*:DeprecationWarning",
    # testcontainers' RedisContainer (tests/integration/test_queue_reclaim.py)
    # still applies the legacy @wait_container_is_ready decorator internally;
    # the replacement (structured wait strategies) is a testcontainers-side API
    # applied at the decorator's own call site, not something a caller can swap.
    "ignore:The @wait_container_is_ready decorator is deprecated.*:DeprecationWarning",
    # starlette.testclient (used by TestClient in tests/unit/test_health.py,
    # test_security.py, test_app.py) prefers the not-yet-released httpx2
    # package and warns when it falls back to the pinned httpx dependency;
    # that fallback is explicitly supported and is what this project uses.
    "ignore:Using .httpx. with .starlette.testclient. is deprecated.*:starlette.exceptions.StarletteDeprecationWarning",
]
xfail_strict = true
markers = [
    "quota_gate_real: opts an enqueue test out of the autouse quota-gate no-op patch",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security-focused tests (auth, input validation, etc.)",
    "benchmark: marks tests as benchmark tests",
    "py310: marks tests specific to Python 3.10",
    "py311plus: marks tests requiring Python 3.11+",
    "py313plus: marks tests requiring Python 3.13+ (PEP 594 removals)",
    "py314plus: marks tests requiring Python 3.14+ (free-threaded, PEP 649)",
    "perf: Performance and load tests (benchmarking, stress testing)",
    "performance: Alias for perf marker",
    "smoke: Smoke tests for quick sanity checks",
    "regression: Regression tests for previously fixed bugs",
    "llm_eval: Tier 3 behavioral LLM evaluation (scheduled, not run in CI PRs)",
    "ai_security: adversarial AI security tests",
    "mutation_deselect: excluded under mutation testing (mutmut's trampoline cannot forward athrow into async generators)",
]

# Coverage Configuration
# Note: Coverage source is specified via pytest's --cov argument in addopts above
[tool.coverage.run]
branch = true
relative_files = true  # Required for SonarCloud in GitHub Actions
omit = [
    # Test files
    "*/tests/*",
    "*/test_*.py",

    # Python internals
    "*/__pycache__/*",
    "*/site-packages/*",

    # Development artifacts (from image_detection best practices)
    "validation/*",     # Validation/verification scripts
    "benchmarks/*",     # Benchmarking framework
    "data/*",           # Data processing scripts
    "scripts/*",        # Utility scripts
    "notebooks/*",      # Jupyter notebooks
    "tmp_cleanup/*",    # Temporary files
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true

# Interrogate Configuration (Docstring Coverage)
[tool.interrogate]
verbose = 1
fail-under = 85
exclude = ["tests", "docs", "build", "dist"]
ignore-init-method = true
ignore-init-module = true
color = true

# Pydoclint Configuration (Docstring Argument Validation)
# Validates that docstring arguments match function signatures
# Reference: https://github.com/jsh9/pydoclint
[tool.pydoclint]
style = "google"
exclude = '\.git|tests/|scripts/|benchmarks/|tools/|noxfile\.py|\.claude/'
arg-type-hints-in-docstring = true
arg-type-hints-in-signature = true
skip-checking-raises = false
require-return-section-when-returning-nothing = false

# Mutation Testing Configuration (mutmut 3.x dialect; see noxfile.py `mutate`)
#
# - `only_mutate` scopes mutation to the deterministic core (storybook,
#   validator, player, publishing, moderation, events, story_requests,
#   exceptions), where a missed mutant means a validation or safety gate
#   regression could ship. The API/generation/covers layers are copied but
#   not mutated: their behavior is dominated by FastAPI wiring and external
#   providers, and mutating them multiplies runtime without adding gate
#   signal. Widen this list deliberately, not by default.
# - `pytest_add_cli_args` resets addopts so the coverage flags (and their
#   --cov-fail-under=80 gate) do not run once per mutant, and deselects
#   `mutation_deselect`-marked tests: mutmut's trampoline wraps async
#   generator functions in an `async for`/`yield` delegator, which cannot
#   forward athrow() into the inner generator, so tests that drive an async
#   generator's error path via athrow() fail under instrumentation while
#   passing in a normal run.
# - `also_copy` ships the non-package files the unit suite reads at runtime
#   into mutmut's mutants/ working tree (conformance corpus, skeleton
#   catalog, band configs, scripts/ imports, planning-docs fixtures).
[tool.mutmut]
source_paths = ["src/cyo_adventure"]
only_mutate = [
    "src/cyo_adventure/storybook/*",
    "src/cyo_adventure/validator/*",
    "src/cyo_adventure/player/*",
    "src/cyo_adventure/publishing/*",
    "src/cyo_adventure/moderation/*",
    "src/cyo_adventure/events/*",
    "src/cyo_adventure/story_requests/*",
    "src/cyo_adventure/core/exceptions.py",
]
pytest_add_cli_args_test_selection = ["tests/unit"]
pytest_add_cli_args = [
    "-x",
    "-o",
    "addopts=",
    "-p",
    "no:cacheprovider",
    "-q",
    "-m",
    "not mutation_deselect",
]
also_copy = [
    "schema/",
    "skeletons/",
    "configs/",
    "scripts/",
    "docs/",
    "data/",
    "frontend/src/",
    "supabase/",
    "out/",
    "CHANGELOG.md",
]

# Bandit Security Configuration
# Run: uv run bandit -c pyproject.toml -r src/
# Reference: https://bandit.readthedocs.io/
[tool.bandit]
# Directories to exclude from scanning
exclude_dirs = [
    "tests",
    "scripts",
    "benchmarks",
    "tools",
    "fuzz",
    "docs",
    ".venv",
    "venv",
    "build",
    "dist",
]

# Skip these checks (false positives or acceptable in context)
skips = [
    "B101",  # assert_used - pytest uses assert statements
    "B104",  # hardcoded_bind_all_interfaces - often intentional for dev servers
    "B311",  # random - non-crypto random is fine for non-security purposes
    "B404",  # import_subprocess - subprocess is needed, usage is checked
    "B603",  # subprocess_without_shell_equals_true - we validate inputs
]

# Targets to scan (can be overridden on command line)
targets = ["src"]

# Severity and confidence levels
# Run with -ll (medium+) or -lll (high only) for less noise
# These are applied when using -c pyproject.toml
[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/*_test.py"]

[tool.test-coverage-agent]
critical_modules = [
    "src/cyo_adventure/api/approval.py",
    "src/cyo_adventure/api/deps.py",
    "src/cyo_adventure/middleware/security.py",
    "src/cyo_adventure/publishing/service.py",
    "src/cyo_adventure/publishing/state_machine.py",
    "src/cyo_adventure/moderation/pipeline.py",
    "src/cyo_adventure/moderation/classifiers.py",
    "src/cyo_adventure/moderation/review_provider.py",
    "src/cyo_adventure/moderation/stages.py",
    "src/cyo_adventure/moderation/repair.py",
    "src/cyo_adventure/moderation/report.py",
]
critical_line_threshold = 90
critical_branch_threshold = 80

# Vulture Configuration (Dead Code Detection)
# Detects unused code to maintain clean codebase
# Run: uv run vulture src/
[tool.vulture]
min_confidence = 80
paths = ["src/"]
exclude = [
    "tests/",
    "docs/",
    ".venv/",
    "venv/",
    "build/",
    "dist/",
]
# Whitelist common false positives
ignore_names = [
    "visit_*",  # AST visitor methods
    "setUp",
    "tearDown",
    "setUpClass",
    "tearDownClass",
    "__*__",  # Magic methods
]

# UV Configuration
[tool.uv]
# Note: UV now recommends using [dependency-groups] instead of dev-dependencies
# We use [project.optional-dependencies] for dev dependencies (PEP 621 standard)

# =============================================================================
# SUPPLY CHAIN SECURITY - Package Index Configuration
# =============================================================================
# Priority order:
#   1. Assured OSS (Google-verified, SLSA Level 3) - third-party packages
#   2. Internal (python-libs) - internal shared packages
#   3. PyPI (fallback) - packages not in Assured OSS
#
# Documentation: https://cloud.google.com/assured-open-source-software/docs
# =============================================================================

[[tool.uv.index]]
name = "assured-oss"
url = "https://us-python.pkg.dev/cloud-aoss/cloud-aoss-python/simple"
explicit = true
# Google Assured OSS - curated packages with SLSA Level 3 provenance
# explicit = true: packages must be directed here via [tool.uv.sources]
# This prevents auth failures when GCP credentials are not configured
# Full list: https://cloud.google.com/assured-open-source-software/docs/supported-packages

[[tool.uv.index]]
name = "internal"
url = "https://us-central1-python.pkg.dev/assured-oss-457903/python-libs/simple"
explicit = true
# Internal packages from your organization's Artifact Registry
# explicit = true: packages must be directed here via [tool.uv.sources]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
# PyPI is the default - all packages resolve from here unless explicitly directed

# =============================================================================
# Package Sources - Direct specific packages to secure indexes
# =============================================================================
# After configuring GCP authentication, uncomment packages to pull from Assured OSS:
#
# [tool.uv.sources]
# numpy = { index = "assured-oss" }
# pandas = { index = "assured-oss" }
# requests = { index = "assured-oss" }
# flask = { index = "assured-oss" }
# django = { index = "assured-oss" }
#
# For internal packages:
# your-internal-package = { index = "internal" }
#
# Setup: ./scripts/setup-supply-chain.sh
# Packages: https://cloud.google.com/assured-open-source-software/docs/supported-packages

# Semantic Release Configuration
# Automates versioning and changelog generation based on conventional commits
# Reference: https://python-semantic-release.readthedocs.io/
[tool.semantic_release]
# Version location in this file
version_toml = ["pyproject.toml:project.version"]

# Commit message parsing
# python-semantic-release v10's built-in parser registry (_known_commit_parsers
# in cli/config.py) only recognizes "angular", "conventional", "emoji", "scipy",
# and "tag"; the pre-v10 alias "conventional_commits" is rejected with
# "Unrecognized commit parser value" and fails the release job outright.
commit_parser = "conventional"
commit_parser_options = { parse_squash_commits = true, ignore_merge_commits = true }

# Version behavior
major_on_zero = false  # Don't bump to 1.0.0 automatically
allow_zero_version = true  # Allow 0.x.x versions

# Branches configuration
[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
prerelease_token = "dev"

[tool.semantic_release.branches.release]
match = "release/*"
prerelease = true
prerelease_token = "rc"

# Changelog configuration
[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    "^chore\\(release\\):",
    "^ci:",
    "^build:",
]

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = true
lstrip_blocks = true
keep_trailing_newline = true

# Remote configuration
[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

# Publishing configuration
[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
# Cruft skip list: paths to preserve across `cruft update` runs.
# Cruft reads this section at update time from the live project directory,
# so these values survive cruft regenerating .cruft.json. The post-gen hook
# no longer writes to .cruft.json for this purpose; this section is the
# canonical skip list.
[tool.cruft]
skip = [
    # Git internals (binary objects)
    ".git",
    ".git/*",
    "**/.git/**",
    # Python bytecode and caches
    "*.pyc",
    "**/__pycache__/**",
    "*.egg-info/**",
    ".mypy_cache/**",
    ".pytest_cache/**",
    ".ruff_cache/**",
    ".tox/**",
    # Virtual environments
    ".venv/**",
    "venv/**",
    # Lock files (frequently change, can have binary-like content)
    "*.lock",
    "uv.lock",
    "poetry.lock",
    # Build artifacts
    "*.whl",
    "dist/**",
    "build/**",
    # Coverage and test artifacts
    ".coverage",
    "htmlcov/**",
    # Database files (binary)
    "*.db",
    "*.sqlite",
    "*.sqlite3",
    # IDE and tool caches
    ".qlty/**",
    ".sonarlint/**",
    ".idea/**",
    ".vscode/**",
    # Node modules (if any JS tooling)
    "node_modules/**",
    # Frontend user customizations (don't overwrite with cruft update)
    "frontend/src/components/**",
    "frontend/src/hooks/**",
    "frontend/src/pages/**",
    "frontend/src/routes/**",
    "frontend/src/App.tsx",
    "frontend/src/App.css",
    "frontend/public/**",
    # Frontend generated/build files
    "frontend/src/client/**",
    "frontend/dist/**",
    "frontend/node_modules/**",
    "frontend/.vite/**",
    "frontend/coverage/**",
    # Template-specific files that should remain project-owned
    "CLAUDE.md",
    "REUSE.toml",
    "docs/template_feedback.md",

]

# FIPS checker acknowledged-findings baseline (ADR-013).
# Each entry dispositions one info-level "may need FIPS verification" finding
# from scripts/check_fips_compatibility.py. reason and reference are
# mandatory; reviewed dates expire after 90 days (the ADR-013 quarterly
# review), after which the checker warns until the disposition is
# re-verified. Where a claim is mechanically testable, the backing assertion
# lives in tests/unit/test_fips_runtime_assertions.py and is named in the
# reason; renewing a reviewed date requires those assertions to be green.
[tool.fips_check.acknowledged.cryptography]
reason = "ML-DSA/SLH-DSA floor (>=45) and linked OpenSSL 3.x are asserted by tests/unit/test_fips_runtime_assertions.py; FIPS provider activation is a host property, not testable in CI"
reference = "docs/security/crypto-inventory.md (section 6, dependency floors)"
reviewed = 2026-07-17

[tool.fips_check.acknowledged.pyjwt]
reason = "Allowlist is config-driven and asymmetric-only by default; the startup validator refusing none/HS* and the >=2.13 floor are asserted by tests/unit/test_fips_runtime_assertions.py"
reference = "docs/security/crypto-inventory.md (section 1, bearer-token verification)"
reviewed = 2026-07-17

[tool.fips_check.acknowledged.httpx]
reason = "Egress TLS inherits the container's OpenSSL 3.5 defaults; the stdlib TLS 1.2+ floor and OpenSSL 3.x link are asserted by tests/unit/test_fips_runtime_assertions.py"
reference = "docs/security/crypto-inventory.md (section 2, TLS legs)"
reviewed = 2026-07-17

[tool.fips_check.acknowledged.boto3]
reason = "Used only for Cloudflare R2 uploads with SigV4 (HMAC-SHA256, symmetric, quantum-safe); AWS FIPS endpoints do not apply to R2"
reference = "docs/security/crypto-inventory.md (item 8, backend to R2)"
reviewed = 2026-07-17
